2006-01-07  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Cache back-ends detection results

2006-01-06  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Sync CFLAGS to configure.ac, but keeping -O2, as *no*
	optimization level makes no sense...
	
	* README: update CMake featurelist

2006-01-05  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c, src/alc/alc_device.c,
	src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_arts.c,
	src/backends/alc_backend_bsd.c, src/backends/alc_backend_darwin.c,
	src/backends/alc_backend_esd.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_linux.c, src/backends/alc_backend_morphos.c,
	src/backends/alc_backend_null.c, src/backends/alc_backend_sdl.c,
	src/backends/alc_backend_solaris.c, src/backends/alc_backend_wave.c,
	src/backends/alc_backend_windows.c, src/extensions/al_ext_loki.c:
	Started to use our own coding guidelines.

	* admin/autotools/.indent.pro: Use TAB-free GNU style. The previous
	8-column tabbed indentation was eating far too much space when long
	symbol names are used. Let's slowly move towards this style when
	reworking files, the rest of the world seems to live quite well with it.

	* README: Added coding guidelines. Reformatted a bit.

2006-01-05  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: enable optimization by default

2006-01-04  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: sync to configure.ac regarding back-ends and fix
	missing compilation of objects in dlopen case

2006-01-04  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend.h: Fixed comment.

	* src/Makefile.am, src/al_mixer.c, src/alc/alc_context.c,
	src/alc/alc_device.c, src/extensions/al_ext_capture.c,
	src/extensions/al_ext_loki.c: Previously the "arch" subdirectory
	contained highly unrelated things, now all backends are cleanly
	separated into a "backends" subdirectory.
