@@ -250,69 +250,28 @@ IF(DEBUG)
     ENDIF(EFENCE_LIB MATCHES "NOTFOUND")
   ENDIF(EFENCE)
 
-  IF(DEBUG_MAXIMUS)
-    ADD_DEFINE(DEBUG_MAXIMUS)
-  ENDIF(DEBUG_MAXIMUS)
+  MACRO(CHECK_DEBUG DEBUG_OPTION)
+  IF(${DEBUG_OPTION})
+    ADD_DEFINE(${DEBUG_OPTION})
+  ENDIF(${DEBUG_OPTION})
+  ENDMACRO(CHECK_DEBUG)
 
-  IF(DEBUG_STUB)
-    ADD_DEFINE(DEBUG_STUB)
-  ENDIF(DEBUG_STUB)
-
-  IF(DEBUG_LOOP)
-    ADD_DEFINE(DEBUG_LOOP)
-  ENDIF(DEBUG_LOOP)
-
-  IF(DEBUG_CONVERT)
-    ADD_DEFINE(DEBUG_CONVERT)
-  ENDIF(DEBUG_CONVERT)
-
-  IF(DEBUG_CONFIG)
-    ADD_DEFINE(DEBUG_CONFIG)
-  ENDIF(DEBUG_CONFIG)
-
-  IF(DEBUG_LOCK)
-    ADD_DEFINE(DEBUG_LOCK)
-  ENDIF(DEBUG_LOCK)
-
-  IF(DEBUG_EXT)
-    ADD_DEFINE(DEBUG_EXT)
-  ENDIF(DEBUG_EXT)
-
-  IF(DEBUG_BUFFER)
-    ADD_DEFINE(DEBUG_BUFFER)
-  ENDIF(DEBUG_BUFFER)
-
-  IF(DEBUG_SOURC)
-    ADD_DEFINE(DEBUG_SOURC)
-  ENDIF(DEBUG_SOURC)
-
-  IF(DEBUG_MIXER)
-    ADD_DEFINE(DEBUG_MIXER)
-  ENDIF(DEBUG_MIXER)
-
-  IF(DEBUG_STREAMING)
-    ADD_DEFINE(DEBUG_STREAMING)
-  ENDIF(DEBUG_STREAMING)
-
-  IF(DEBUG_MATH)
-    ADD_DEFINE(DEBUG_MATH)
-  ENDIF(DEBUG_MATH)
-
-  IF(DEBUG_MEM)
-    ADD_DEFINE(DEBUG_MEM)
-  ENDIF(DEBUG_MEM)
-
-  IF(DEBUG_CONTEXT)
-    ADD_DEFINE(DEBUG_CONTEXT)
-  ENDIF(DEBUG_CONTEXT)
-
-  IF(DEBUG_QUEUE)
-    ADD_DEFINE(DEBUG_QUEUE)
-  ENDIF(DEBUG_QUEUE)
-
-  IF(DEBUG_FILTER)
-    ADD_DEFINE(DEBUG_FILTER)
-  ENDIF(DEBUG_FILTER)
+  CHECK_DEBUG(DEBUG_MAXIMUS)
+  CHECK_DEBUG(DEBUG_STUB)
+  CHECK_DEBUG(DEBUG_LOOP)
+  CHECK_DEBUG(DEBUG_CONVERT)
+  CHECK_DEBUG(DEBUG_CONFIG)
+  CHECK_DEBUG(DEBUG_LOCK)
+  CHECK_DEBUG(DEBUG_EXT)
+  CHECK_DEBUG(DEBUG_BUFFER)
+  CHECK_DEBUG(DEBUG_SOURC)
+  CHECK_DEBUG(DEBUG_MIXER)
+  CHECK_DEBUG(DEBUG_STREAMING)
+  CHECK_DEBUG(DEBUG_MATH)
+  CHECK_DEBUG(DEBUG_MEM)
+  CHECK_DEBUG(DEBUG_CONTEXT)
+  CHECK_DEBUG(DEBUG_QUEUE)
+  CHECK_DEBUG(DEBUG_FILTER)
 ELSE(DEBUG)
 
   ADD_DEFINITIONS(-DNDEBUG)
@@ -465,7 +424,6 @@ IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
 
       IF(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
         MESSAGE(STATUS "${BACKEND_OPTION} back-end library ${BACKEND_LIB} not found.")
-        SET(${BACKEND_OPTION} OFF)
       ELSE(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
 
         # check whether back-end is link-able
@@ -596,7 +554,6 @@ ENDIF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_6
 
 
 # compiler specific settings
-
 CHECK_COMPILER_VISIBILITY(HAVE_VISIBILITY)
 IF(CMAKE_COMPILER_IS_GNUCC)
   ADD_DEFINITIONS(-std=c99)
