@@ -1,6 +1,7 @@
 2006-01-07  Prakash Punnoor <prakash@punnoor.de>
 
-	* CMakeLists.txt: Cache back-ends detection results
+	* CMakeLists.txt: Cache back-ends detection results; use macro for debugging
+	options checking
 
 2006-01-06  Prakash Punnoor <prakash@punnoor.de>
 
